--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "firebase": "^7.8.1",
     "re-base": "^4.0.0",
     "react": "^16.12.0",
+    "react-data-table-component": "^6.3.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
